# parser-benchmark

./: .gitignore  README.md  package.json  result-file-typescript.md
.github/workflows/: benchmark.yml
oxc/: Cargo.toml
result/: antd.json  antd.md  three.json  three.md  typescript.json  typescript.md
rust/: Cargo.toml
rust/src/: oxc.rs  swc.rs
scripts/: generate-readme.ts  load-files.ts
zig/: build.zig  build.zig.zon
zig/src/: jam.zig  yuku.zig
zig/zig-pkg/unicode_id-0.0.1-u-LDL-yCAQDIRl7z5q2EZmVoUP_DgimhNRwxAiPBLTwl/: build.zig  build.zig.zon
zig/zig-pkg/unicode_id-0.0.1-u-LDL-yCAQDIRl7z5q2EZmVoUP_DgimhNRwxAiPBLTwl/src/: root.zig  table.zig
zig/zig-pkg/unicode_id-0.0.1-u-LDL-yCAQDIRl7z5q2EZmVoUP_DgimhNRwxAiPBLTwl/src/tools/: generate.zig
zig/zig-pkg/yuku-0.0.0-m6raniT3BwD7VQ6zjK_IapjPBbursQqv_qqS9HLRdOmY/: build.zig.zon
zig/zig-pkg/yuku-0.0.0-m6raniT3BwD7VQ6zjK_IapjPBbursQqv_qqS9HLRdOmY/src/util/: root.zig
