[package]
name = "rust_parsers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oxc"
path = "src/oxc.rs"
test    = false
doctest = false

[dependencies]
oxc_allocator = "0.102.0"
oxc_parser = "0.102.0"
oxc_span = "0.102.0"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"
