[package]
name = "rust_parsers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oxc"
path = "src/oxc.rs"
test    = false
doctest = false

[[bin]]
name = "swc"
path = "src/swc.rs"
test    = false
doctest = false

[dependencies]
oxc_allocator = "0.102.0"
oxc_parser = "0.102.0"
oxc_span = "0.102.0"

swc_ecma_parser = { version = "33.0.0", features = ["typescript"] }
swc_ecma_ast = "20.0.0"
swc_common = "18.0.1"

mimalloc = { package = "mimalloc-safe", version = "0.1.52" }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"
